--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #ccc;
+    background-color: #a4f8f2;
 }
 
 header {
-    background-color: #333;
+    background-color: #090b0b;
     color: #fff;
     padding: 20px;
     text-align: center;
@@ -98,7 +98,7 @@ footer {
 margin-left: 10%;
 width: 80%;
 height: 90%;
-background-color: rgb(225, 233, 240);
+background-color: rgb(152, 203, 248);
 justify-content: space-evenly;
 align-items: center;
 }
